objects/MedProBT__Address__c.object
<CustomObject>
    <fields>
        <fullName>MedProBT__AddressID__c</fullName>
        <formula>Id</formula>
        <label>AddressID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses (Contact2)</relationshipLabel>
        <relationshipName>Addresses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProBT__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProBT__DEA_registration__c</fullName>
        <label>DEA registration</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__License_Status__c</fullName>
        <label>License Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid_vod</fullName>
                </value>
                <value>
                    <fullName>Valid_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedProBT__MedProID__c</fullName>
        <externalId>true</externalId>
        <label>MedProID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Prof_Desig__c</fullName>
        <label>Prof Desig</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__State_License_Issue_Date__c</fullName>
        <label>State License Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedProBT__State_License_Number__c</fullName>
        <label>State License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>MedProBT__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MedProBT__No_LA</fullName>
        <active>true</active>
        <errorConditionFormula>MedProBT__State__c = &quot;LA&quot;</errorConditionFormula>
        <errorDisplayField>MedProBT__State__c</errorDisplayField>
        <errorMessage>State can&apos;t be LA</errorMessage>
    </validationRules>
</CustomObject>